--- a/package.json
+++ b/package.json
@@ -18,5 +18,27 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8"
+  },
+  "gitHub": "https://github.com/soulwax/node-jwt-crypt",
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "endOfLine": "auto",
+    "printWidth": 140,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "trimTrailingWhitespace": true,
+    "insertPragma": false,
+    "proseWrap": "preserve",
+    "htmlWhitespaceSensitivity": "css",
+    "vueIndentScriptAndStyle": true,
+    "vueIndentHTML": true,
+    "vuePrettier": true,
+    "vueSingleQuote": true,
+    "vueTrailingComma": "none",
+    "vuePrintWidth": 100
   }
 }
